syntax = "proto3";

message Empty{}

service Greeter {
  rpc EmptyCall(Empty) returns (Empty);
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Periodic(stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}